# geo-finops

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  alembic.ini  install_scheduler.ps1  install_task.cmd  pyproject.toml
docs/: LESSONS_LEARNED.md  REFACTOR-2026-04-19.md  ROADMAP_2026Q2-Q4.md
geo_finops/: __init__.py  aggregates.py  cli.py  config.py  db.py  migrate.py  prices.py  prices.yaml  sync.py  tracker.py
geo_finops/digest/: __init__.py  builders.py  cloud.py  formatters.py  reporters.py
geo_finops/migrations/: env.py
geo_finops/migrations/versions/: 0001_baseline.py
scripts/: aggregate_dashboard.py  bootstrap_supabase.py  export_snapshot.py  health_check.py  weekly_digest.py
tests/: conftest.py  test_aggregate_dashboard.py  test_aggregates.py  test_alembic_baseline.py  test_config.py  test_digest.py  test_prices.py  test_sync_creds.py  test_tracker.py
