[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-finops"
version = "2.0.0"
description = "Tracking centralizado de uso de LLMs em todos os projetos Brasil GEO"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Alexandre Caramaschi" }]
keywords = ["finops", "llm", "cost-tracking", "supabase", "brasil-geo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "httpx>=0.27",
    "alembic>=1.13",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pyyaml>=6.0",
]

[project.scripts]
geo-finops = "geo_finops.cli:main"
geo-finops-sync = "geo_finops.sync:main"

[project.urls]
Repository = "https://github.com/alexandrebrt14-sys/geo-finops"

[tool.setuptools.packages.find]
include = ["geo_finops*"]

[tool.setuptools.package-data]
geo_finops = ["prices.yaml", "migrations/**/*.py", "migrations/**/*.mako"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: testes que dependem de Supabase real (pulam em CI sem creds)",
    "slow: testes lentos (>1s)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["geo_finops"]
branch = true
omit = ["geo_finops/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "def __repr__",
]
show_missing = true
precision = 1

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "geo_finops/migrations/versions",
    ".tools",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line-too-long (delegado ao formatter)
    "B008",   # function-call-in-default-argument (pytest fixtures, argparse)
    "SIM108", # or-expression-over-if-else (as vezes prejudica leitura)
    "PTH123", # open() -> Path.open() (pattern muito difuso)
    "TC003",  # typing-only-stdlib-import (com __future__ annotations, nao importa)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PTH"]
"scripts/*" = ["PTH"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
packages = ["geo_finops"]
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "geo_finops/migrations/",
    "tests/",
    "scripts/",
]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
